--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Welcome To Javascript and Python Course</h1>
     <h2>Add heading2</h2>
-    Hello World !
+     <h3>Add heading3</h3>
+    Falljs !
 </body>
 
 </html>
