Adding Exclation point to h1

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-    <h1>Welcome To Javascript and Python Course</h1>
+    <h1>Welcome To Javascript and Python Course !</h1>
     <h2>Add heading2</h2>
-     <h3>Add heading3</h3>
+    <h3>Add heading3</h3>
     Falljs !
 </body>
 
